--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ crashlytics-build.properties
 
 
 UserSettings/Layouts/default-2021.dwlt
+
+UserSettings/EditorUserSettings.asset
+
+UserSettings/Layouts/CurrentMaximizeLayout.dwlt
