--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ UserSettings/Layouts/default-2021.dwlt
 UserSettings/EditorUserSettings.asset
 
 UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+
+ProjectSettings/ProjectSettings.asset
