Quit button Fixed, Puffstool Prototype, rooms design spin
+ health system no longer debugs log

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 
 ProjectSettings/ProjectSettings.asset
+
+Assets/Skybox.mat
