Slug Room start + chest
>started Slug Room layout
>Chest script created (Chest Editor to allow for only one bool to be checked at a time)
>Key Inventory script (self explanatory)
>added skybox.mat and SearchSettings to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 ProjectSettings/ProjectSettings.asset
 
 Assets/Skybox.mat
+
+UserSettings/Search.settings
