Prefabs, Better Combat, Chuchu Prototype
>Made Prefabs out of most game elements
>Slug combat feels better (less knockback, flicker + hit effect)
>Chuchu boss Prototype
>Prepared the ground for death screen + animation
>Pots now dissapear eventually when thrown

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ ProjectSettings/ProjectSettings.asset
 Assets/Skybox.mat
 
 UserSettings/Search.settings
+
+Assets/Ayelet/Assets/Ayo Assets/MinishCap/PostProccing and Skybox/TFF_Skybox_Day_01A 1.mat
