New Barrel Room work
>added colliders to everything
>added the barrel mechanic to the new barrel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Minish Cap Remake.sln"
+    "dotnet.defaultSolution": "Minish-Cap-Remake.sln"
 }
